Fixed articles overflowing container.

--- a/frontend/pages/article.scss
+++ b/frontend/pages/article.scss
@@ -2,6 +2,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    overflow: auto;
     
     :global(.breadcrumbs) {
         flex-shrink: 0;
